shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 3.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2732
height: 2048
breadth: 682.6666666666666
length: 2464
groups: 2
buttons_group: 2
button_size: 52
button_track_margin: 0.2
safe_area:
  - 154
  - 20
  - 114
  - 25
f0: 167.5173992842461

