shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 4.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2436
height: 1125
breadth: 375
length: 2260
whitespace: 58
groups: 2
buttons_group: 2
button_size: 29
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 157.63445
sample_rate_hz: 96000
channels: 2

