shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 6.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 3840
height: 2160
breadth: 720
length: 3732
groups: 2
buttons_group: 5
button_size: 12
button_track_margin: 0.2
safe_area:
  - 74
  - 20
  - 34
  - 25
f0: 216.21936734440519

