shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 7.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1280
height: 800
breadth: 266.6666666666667
length: 1092
whitespace: 64
groups: 1
buttons_group: 3
button_size: 32
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 161.66632
sample_rate_hz: 96000
channels: 1

