shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 8.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 3440
height: 1440
breadth: 480
length: 3260
whitespace: 60
groups: 5
buttons_group: 2
button_size: 30
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 114.92094
sample_rate_hz: 96000
channels: 2

