shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 9.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2560
height: 1600
breadth: 533.3333333333334
length: 2132
groups: 1
buttons_group: 3
button_size: 92
button_track_margin: 0.2
safe_area:
  - 234
  - 20
  - 194
  - 25
f0: 181.54999311484426

